# get_next_line

./: CMakeLists.txt  README.md  get_next_line.c  get_next_line.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  (+15 more)
libft/includes/: libft.h
